--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Youtube Miniaturas</title>
+  <title>Prueba para externos</title>
   <link rel="icon" href="https://icons.iconarchive.com/icons/dakirby309/simply-styled/256/YouTube-icon.png" type="image/png">
   <meta name="description" content="Es una aplicación de medios en línea gratuita que le permite ver y descargar cualquier imagen de vista previa en miniatura de Youtube en resolución máxima, HD, 1080p... ">
   <meta property="og:title" content="Ver y descargar miniaturasde Youtube">
